# CGSAR_RL

./: .gitignore  .wrapper.py.~undo-tree~  ObjectOutline.rnote  README.md  README.org  logview.fish  pyproject.toml  wrapper.py
ARCHIVE-simulation/: .environment.py.~undo-tree~  .main.py.~undo-tree~  .map_data.py.~undo-tree~  .ship.py.~undo-tree~  environment.py  main.py  map_data.py  ship.py
application/: .__init__.py.~undo-tree~  config.py  logger.py  logview.py
resources/: settings.json  settings.json.bkp  settings.org
resources/GEBCO_nc/: gebco_2024_tid_n35.0_s25.0_w-82.0_e-75.0.nc
resources/GEBCO_tiff/: gebco_2024_tid_n35.0_s25.0_w-82.0_e-75.0.tif
simulation/: .#Simulation.py  .BathymetryFetcher.py.~undo-tree~  .__init__.py.~undo-tree~  .config.py.~undo-tree~  .environment.py.~undo-tree~  .main.py.~undo-tree~  BathymetryFetcher.py  CurrentFetcher.py  DepthFetcher.py  Environment.py  README.org  Simulation.py  Victim.py  Visualizer.py  WindFetcher.py  environment.py  main.py
tests/: .LocalGebco.py.~undo-tree~  LocalGebco.py  OverpassCoastlines.py
