[tool.poetry]
name = "cgsar-rl"
version = "0.1.0"
description = "Testing for now..."
authors = ["Christian <c.ship.johnson@gmail.com>"]
license = "GPL3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
