[tool.poetry]
name = "cgsar-rl"
version = "0.1.0"
description = "Testing for now..."
authors = ["Christian <c.ship.johnson@gmail.com>"]
license = "GPL3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.1"
pygame-menu = "^4.5.1"
overpy = "^0.7"
pyproj = "^3.7.0"
rasterio = "^1.4.3"
matplotlib = "^3.10.0"
numpy = "^2.2.1"
copernicusmarine = "^2.0.0"
xarray = "^2025.1.1"
cartopy = "^0.24.1"
scipy = "^1.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
